--- a/project1/project1.vcxproj
+++ b/project1/project1.vcxproj
@@ -184,6 +184,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="ChildView.h" />
+    <ClInclude Include="Decor.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Item.h" />
@@ -191,10 +192,13 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="project1.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="Road.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="XmlNode.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ChildView.cpp" />
+    <ClCompile Include="Decor.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="MainFrm.cpp" />
@@ -205,6 +209,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="project1.cpp" />
+    <ClCompile Include="Road.cpp" />
+    <ClCompile Include="XmlNode.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="project1.rc" />
