--- a/project1/project1.vcxproj
+++ b/project1/project1.vcxproj
@@ -191,6 +191,7 @@
     <ClInclude Include="Decor.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="Grass.h" />
     <ClInclude Include="Hero.h" />
     <ClInclude Include="Item.h" />
     <ClInclude Include="MainFrm.h" />
@@ -205,6 +206,7 @@
     <ClCompile Include="ChildView.cpp" />
     <ClCompile Include="Decor.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="Grass.cpp" />
     <ClCompile Include="Hero.cpp" />
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="MainFrm.cpp" />
