Added DoubleBufferDC and implemented it with the graphics context, moved tile to pixel conversion for x and y to CItem XmlLoad()

--- a/project1/project1.vcxproj
+++ b/project1/project1.vcxproj
@@ -189,6 +189,7 @@
   <ItemGroup>
     <ClInclude Include="ChildView.h" />
     <ClInclude Include="Decor.h" />
+    <ClInclude Include="DoubleBufferDC.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Grass.h" />
