--- a/project1/project1.vcxproj
+++ b/project1/project1.vcxproj
@@ -197,6 +197,7 @@
     <ClInclude Include="MainFrm.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="project1.h" />
+    <ClInclude Include="Rectangle.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Road.h" />
     <ClInclude Include="targetver.h" />
@@ -217,6 +218,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="project1.cpp" />
+    <ClCompile Include="Rectangle.cpp" />
     <ClCompile Include="Road.cpp" />
     <ClCompile Include="XmlNode.cpp" />
   </ItemGroup>
