--- a/Testing/Testing.vcxproj
+++ b/Testing/Testing.vcxproj
@@ -126,7 +126,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <AdditionalLibraryDirectories>$(VCInstallDir)UnitTest\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>pch;Game;Item;Decor;Grass;Hero;Road;XmlNode</AdditionalDependencies>
+      <AdditionalDependencies>pch;Game;Item;Vehicle;Decor;Rectangle;Grass;Hero;Road;XmlNode</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
