--- a/project1/project1.vcxproj
+++ b/project1/project1.vcxproj
@@ -202,6 +202,7 @@
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Road.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="Vehicle.h" />
     <ClInclude Include="XmlNode.h" />
   </ItemGroup>
   <ItemGroup>
@@ -221,6 +222,7 @@
     <ClCompile Include="project1.cpp" />
     <ClCompile Include="Rectangle.cpp" />
     <ClCompile Include="Road.cpp" />
+    <ClCompile Include="Vehicle.cpp" />
     <ClCompile Include="XmlNode.cpp" />
   </ItemGroup>
   <ItemGroup>
