--- a/project1/project1.vcxproj
+++ b/project1/project1.vcxproj
@@ -189,6 +189,7 @@
   <ItemGroup>
     <ClInclude Include="Cargo.h" />
     <ClInclude Include="ChildView.h" />
+    <ClInclude Include="ControlPanel.h" />
     <ClInclude Include="Decor.h" />
     <ClInclude Include="DoubleBufferDC.h" />
     <ClInclude Include="framework.h" />
@@ -209,6 +210,7 @@
   <ItemGroup>
     <ClCompile Include="Cargo.cpp" />
     <ClCompile Include="ChildView.cpp" />
+    <ClCompile Include="ControlPanel.cpp" />
     <ClCompile Include="Decor.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Grass.cpp" />
