--- a/Testing/Testing.vcxproj.filters
+++ b/Testing/Testing.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="CItemTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CVehicleTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
