--- a/Testing/Testing.vcxproj
+++ b/Testing/Testing.vcxproj
@@ -109,7 +109,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <AdditionalLibraryDirectories>$(VCInstallDir)UnitTest\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>pch;Decor;Game;Grass;Hero;Item;Road;XmlNode;Rectangle</AdditionalDependencies>
+      <AdditionalDependencies>pch;Cargo;Decor;Game;Grass;Hero;Item;Road;XmlNode;Rectangle</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -126,7 +126,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <AdditionalLibraryDirectories>$(VCInstallDir)UnitTest\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>pch;Game;Item;Vehicle;Decor;Rectangle;Grass;Hero;Road;XmlNode</AdditionalDependencies>
+      <AdditionalDependencies>pch;Game;Item;Vehicle;Cargo;Decor;Rectangle;Grass;Hero;Road;XmlNode</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -172,6 +172,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CCargoTest.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="CGameTest.cpp">
       <SubType>
       </SubType>
