Tested some functionality with Car.

--- a/project1/project1.vcxproj
+++ b/project1/project1.vcxproj
@@ -187,6 +187,7 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Car.h" />
     <ClInclude Include="Cargo.h" />
     <ClInclude Include="ChildView.h" />
     <ClInclude Include="ControlPanel.h" />
@@ -208,6 +209,7 @@
     <ClInclude Include="XmlNode.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Car.cpp" />
     <ClCompile Include="Cargo.cpp" />
     <ClCompile Include="ChildView.cpp" />
     <ClCompile Include="ControlPanel.cpp" />
