Pushing to sync with server.

--- a/Testing/Testing.vcxproj
+++ b/Testing/Testing.vcxproj
@@ -109,7 +109,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <AdditionalLibraryDirectories>$(VCInstallDir)UnitTest\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>pch;Cargo;Decor;Game;Grass;Hero;Item;Road;XmlNode;Rectangle</AdditionalDependencies>
+      <AdditionalDependencies>pch;Car;Vehicle;Cargo;Decor;Game;Grass;Hero;Item;Road;XmlNode;Rectangle</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -147,7 +147,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>$(VCInstallDir)UnitTest\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>pch; Game; Item; Hero; XmlNode</AdditionalDependencies>
+      <AdditionalDependencies>pch;Car;Vehicle; Game; Item; Hero; XmlNode</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
