--- a/project1/project1.vcxproj.filters
+++ b/project1/project1.vcxproj.filters
@@ -84,6 +84,9 @@
     <ClInclude Include="IsCargoVisitor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Boat.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="project1.cpp">
@@ -141,6 +144,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="IsCargoVisitor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Boat.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
