--- a/project1/project1.vcxproj.filters
+++ b/project1/project1.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClInclude Include="Boat.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="River.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="project1.cpp">
@@ -147,6 +150,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Boat.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="River.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
