--- a/project1/project1.vcxproj.filters
+++ b/project1/project1.vcxproj.filters
@@ -90,6 +90,9 @@
     <ClInclude Include="River.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="IsVehicleVisitor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="project1.cpp">
@@ -153,6 +156,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="River.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="IsVehicleVisitor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
