--- a/Testing/Testing.vcxproj
+++ b/Testing/Testing.vcxproj
@@ -109,7 +109,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <AdditionalLibraryDirectories>$(VCInstallDir)UnitTest\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>pch;Boat;Cargo;Decor;Game;Grass;Hero;IsCargoVisitor;IsVehicleVisitor;Item;Road;XmlNode;Rectangle;Level;Vehicle</AdditionalDependencies>
+      <AdditionalDependencies>pch;Boat;Car;Cargo;Decor;Game;Grass;Hero;IsCargoVisitor;IsVehicleVisitor;Item;Road;XmlNode;Rectangle;Level;Vehicle</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
