--- a/project1/project1.vcxproj.filters
+++ b/project1/project1.vcxproj.filters
@@ -96,6 +96,9 @@
     <ClInclude Include="DecorTypeVisitor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="IsBoatVisitor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="project1.cpp">
@@ -165,6 +168,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="DecorTypeVisitor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="IsBoatVisitor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
