--- a/project1/project1.vcxproj.filters
+++ b/project1/project1.vcxproj.filters
@@ -99,6 +99,9 @@
     <ClInclude Include="IsBoatVisitor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CargoEatenVisitor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="project1.cpp">
@@ -171,6 +174,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="IsBoatVisitor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CargoEatenVisitor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
