--- a/project1/project1.vcxproj
+++ b/project1/project1.vcxproj
@@ -210,6 +210,7 @@
     <ClInclude Include="project1.h" />
     <ClInclude Include="Rectangle.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="SketchyBoat.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Vehicle.h" />
     <ClInclude Include="XmlNode.h" />
@@ -240,6 +241,7 @@
     </ClCompile>
     <ClCompile Include="project1.cpp" />
     <ClCompile Include="Rectangle.cpp" />
+    <ClCompile Include="SketchyBoat.cpp" />
     <ClCompile Include="Vehicle.cpp" />
     <ClCompile Include="XmlNode.cpp" />
   </ItemGroup>
