--- a/project1/project1.vcxproj.filters
+++ b/project1/project1.vcxproj.filters
@@ -99,6 +99,9 @@
     <ClInclude Include="IsSketchyVisitor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="IsCarVisitor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="project1.cpp">
@@ -171,6 +174,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="IsSketchyVisitor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="IsCarVisitor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
