--- a/project1/project1.vcxproj.filters
+++ b/project1/project1.vcxproj.filters
@@ -102,6 +102,9 @@
     <ClInclude Include="IsCarVisitor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CarriedCargoVisitor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="project1.cpp">
@@ -177,6 +180,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="IsCarVisitor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CarriedCargoVisitor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
